<resources>
    <string name="app_name">Test</string>
    <string name="edit_name">Enter Name of first team member</string>
    <string name="edit_entryno">Enter your Entry No</string>
    <string name="edit_name1">Enter Name of second team member</string>
    <string name="edit_entryno1">Enter your Entry No</string>
    <string name="team">Enter your team name</string>
    <string name="edit_name2">Enter Name of third team member</string>
    <string name="alert_message">Alert</string>
    <string name="dialog_response_message">Required fields are missing</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="dialog_title">Registeration status</string>
</resources>
