<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.apple.test.MainActivity"
    android:background="#006699">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="320dp"
        android:id="@+id/textView"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/t1"
        android:hint="@string/team"
        android:layout_above="@+id/t2"
        android:layout_alignLeft="@+id/t2"
        android:layout_alignStart="@+id/t2"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/t2"
        android:textStyle="italic"
        android:textColor="#FFFFFF"
        android:hint="@string/edit_name"
        android:textColorHint="#FFFFFF"
        android:width="320dp"
        android:layout_above="@+id/t3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/t3"
        android:hint="@string/edit_entryno"
        android:textColorHint="#FFFFFF"
        android:width="320dp"
        android:layout_above="@+id/t4"
        android:layout_alignLeft="@+id/t2"
        android:layout_alignStart="@+id/t2" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/t4"
        android:textStyle="italic"
        android:textColor="#FFFFFF"
        android:hint="@string/edit_name1"
        android:textColorHint="#FFFFFF"
        android:width="320dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/t3"
        android:layout_alignStart="@+id/t3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:id="@+id/t5"
        android:hint="@string/edit_entryno1"
        android:textColorHint="#FFFFFF"
        android:width="320dp"
        android:layout_below="@+id/t4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/t6"

        android:hint="@string/edit_name2"
        android:layout_below="@+id/t5"
        android:layout_alignLeft="@+id/t5"
        android:layout_alignStart="@+id/t5"
        android:layout_alignRight="@+id/t5"
        android:layout_alignEnd="@+id/t5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/t7"
        android:hint="@string/edit_entryno1"
        android:layout_below="@+id/t6"
        android:layout_alignLeft="@+id/t6"
        android:layout_alignStart="@+id/t6"
        android:layout_alignRight="@+id/t1"
        android:layout_alignEnd="@+id/t1" />

</RelativeLayout>
